tests/invalid/generic_native_not_supported.wio
@Native
fn Identity<T>(value: T) -> T;

fn Entry() -> i32 {
    return 0;
}
